# worldCinemaInfo

./: CMakeLists.txt  README.md  readme.md
Test/: CMakeLists.txt  answers.json  config.json  serverTest.cpp
Test/resources/: Only Old Men Are Going Into Battle.txt  Ruslan and Ludmila.txt  The Adventures of Sherlock Holmes and Dr. Watson.txt  The Three Musketeers.txt
environmentVariables/: CMakeLists.txt  environmentVariables.cpp
nlohmann.json/include/nlohmann/detail/input/: json_sax.hpp
serverTest/: CMakeLists.txt  serverTest.cpp
worldCinemaInfo/: CMakeLists.txt  answers.json  requests.json
worldCinemaInfo/include/: AnswersJSON.h  Configuration.h  ConverterJSON.h  EngineStart.h  Entry.h  RequestsJSON.h  serverTest.cpp
worldCinemaInfo/resources/: Four Tank-Men and a Dog.txt
worldCinemaInfo/src/: AnswersJSON.cpp  ConverterJSON.cpp  EngineStart.cpp  RequestsJSON.cpp  worldCinemaInfo.cpp
worldCinemaInfoSearchEngine/: CMakeLists.txt  answers.json  config.json  requests.json
worldCinemaInfoSearchEngine/include/: AnswersJSON.h  Configuration.h  ConverterJSON.h  EngineStart.h  Entry.h  InvertedIndex.h  RequestsJSON.h  SearchServer.h  serverTest.cpp
worldCinemaInfoSearchEngine/resources/: Ivan Vasilievich Changes Profession.txt  Ruslan and Ludmila.txt  Salyut 7.txt  Seventeen Moments of Spring.txt  The Irony of Fate, or Enjoy Your Bath!.txt  The Place of meeting can not be changed.txt
worldCinemaInfoSearchEngine/src/: AnswersJSON.cpp  ConverterJSON.cpp  EngineStart.cpp  InvertedIndex.cpp  RequestsJSON.cpp  SearchServer.cpp  worldCinemaInfoSearchEngine.cpp
